update style to fix menu spacing

--- a/src/style/Menu.scss
+++ b/src/style/Menu.scss
@@ -106,11 +106,11 @@ Note: Beware of modifying this element as it can break the animations - you shou
 }
 
 .Menu__logo {
-  padding: 2.5em;
+  padding: 0 2.5em;
   display: block;
   border: none !important;
   margin: auto;
-  margin-bottom: 3em;
+  margin-bottom: 1em;
 }
 
 .Menu__social__buttons {
